--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -5,6 +5,7 @@ $color4: #16324f;
 $color5: #d7cdcc;
 $white: #ffffff;
 $grey: #3f3f3f;
+$light-grey: #9b9b9b;
 
 $color1-opac: rgba(221, 110, 66, 0.836);
 $color4-opac: rgba(22, 50, 79, 0.877);
