--- a/src/styles/scss/_mixins.scss
+++ b/src/styles/scss/_mixins.scss
@@ -7,7 +7,7 @@
 
 */
 
-/*-- Grid Template (12 Columns) --*/
+/*-- Grid Template (1 Column) --*/
 @mixin grid-template-1 {
   display: grid;
   grid-template-columns: 1fr;
