--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -6,7 +6,7 @@
 2. Flex Mixins
 
 */
-/*-- Grid Template (12 Columns) --*/
+/*-- Grid Template (1 Column) --*/
 /*-- Grid Template (4 Columns) --*/
 /*--  --*/
 /*--  --*/
@@ -53,17 +53,20 @@
 
 /*------------------------------- 2. Navigation ----*/
 /*-- 2.1. Navbar Top --*/
-.navbar-top, .navbar-bottom {
+.navbar {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
   padding: 4rem 2rem;
-  padding: 0 2rem;
+  padding: 0;
+}
+
+.navbar__top, .navbar__bottom {
+  padding: 0.5rem 1rem 0.5rem 1.8rem;
 }
 
 /*-- 2.2. Navbar Bottom --*/
-/*-- 2.3. Navbar Inner --*/
-.navbar-inner {
+.navbar__bottom {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -73,18 +76,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 1200px;
-  margin: 0.8rem auto;
 }
 
 /*-- 2.4. Navbar Menu --*/
-.navbar-inner__nav {
+.navbar__bottom__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 /*----------------------- 3. Home Page Sections ----*/
@@ -159,43 +157,54 @@
   margin: 4rem 10% 0 10%;
 }
 
-/*------------------ 3.4. About Section --*/
-/*-- 3.4.1. About --*/
-.about {
+/*------------------ 3.4. Info Section --*/
+/*-- 3.4.1. Info --*/
+.info {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
   padding: 4rem 2rem;
 }
 
-/*-- 3.4.2. About Container --*/
-.about__inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+/*-- 3.4.2. Info Container --*/
+.info__inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 1200px;
   margin: 0 auto;
 }
 
-/*-- 3.4.3. About Image --*/
-.about__inner__img {
-  width: 50%;
+/*-- 3.4.3. Info Image --*/
+.info__inner__img {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+.info__inner__img img {
+  width: 100%;
   height: auto;
+}
+
+/*-- 3.4.4. Info Text --*/
+.info__inner__text {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
   margin-left: 2rem;
 }
 
-/*-- 3.4.4. About Info --*/
-.about__inner__info {
-  width: 50%;
-  padding: 2rem;
-}
-
-.about__inner__info h3 {
+.info__inner__text h3 {
   margin-bottom: 2rem;
   color: #c85324;
 }
 
-.about__inner__info p:first-of-type {
+.info__inner__text p:first-of-type {
   margin-bottom: 1rem;
   font-weight: bold;
 }
@@ -252,10 +261,21 @@
   padding: 0 2rem;
 }
 
-.list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.why-us__inner__lists {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+.why-us__inner__lists ul {
+  padding: 1rem;
+}
+
+.why-us__inner__lists ul li {
+  background: url("/src/images/phone.svg") no-repeat;
+  background-position: left center;
+  padding: 10px 10px 10px 40px;
 }
 
 /*---------------- 4.3. Access Section --*/
@@ -389,7 +409,7 @@
   padding: 4rem 2rem;
 }
 
-/*-- 3.2.2. Services Container --*/
+/*-- 3.2.2.  Container --*/
 .packing__inner {
   display: -ms-grid;
   display: grid;
@@ -401,8 +421,57 @@
           justify-content: center;
 }
 
+/*---------------------- 4. About Page Sections ----*/
+.about {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  padding: 4rem 2rem;
+}
+
+.about__inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.about__info {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  margin-right: 2rem;
+}
+
+.about__img {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  width: 100%;
+  height: auto;
+}
+
+.about__img img {
+  width: 100%;
+  height: auto;
+}
+
+.about__list {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  margin-top: 10rem;
+}
+
 /*----------------------------------- ?. Footer ----*/
-footer {
+.footer {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
@@ -410,7 +479,7 @@ footer {
 }
 
 /*--------------------- ?.?. Footer Top --*/
-.footer-top, .footer-middle, .footer-bottom {
+.footer__top, .footer__middle, .footer__bottom {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -425,7 +494,7 @@ footer {
 }
 
 /*-- ?.?.?. Footer Top Left --*/
-.footer-top__left {
+.footer__top__left {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -434,37 +503,37 @@ footer {
           align-items: center;
 }
 
-.footer-top__left span {
+.footer__top__left span {
   margin-left: 0.5rem;
 }
 
-.footer-top__left span:first-of-type {
+.footer__top__left span:first-of-type {
   margin-right: 0.8rem;
 }
 
 /*------------------ ?.?. Footer Middle --*/
-.footer-middle {
+.footer__middle {
   padding: 4rem 0;
 }
 
 /*-- ?.?.?. Footer Middle Links --*/
-.footer-middle__links {
+.footer__middle__links {
   margin-left: 2rem;
 }
 
-.footer-middle__links:first-of-type {
+.footer__middle__links:first-of-type {
   margin-left: 0;
 }
 
-.footer-middle__links h3 {
+.footer__middle__links h3 {
   margin-bottom: 1.5rem;
 }
 
-.footer-middle__links ul li {
+.footer__middle__links ul li {
   line-height: 1.7rem;
 }
 
-.footer-middle__links a:hover {
+.footer__middle__links a:hover {
   text-decoration: underline;
 }
 
@@ -488,14 +557,14 @@ a {
 }
 
 /*-- 1.1. Nav Links --*/
-.nav__link {
+.nav-link {
   padding: 1rem;
   text-transform: uppercase;
   font-size: 0.9rem;
   font-weight: 700;
 }
 
-.nav__link:hover {
+.nav-link:hover {
   color: #16324f;
   background: #ffffff;
 }
@@ -642,13 +711,13 @@ hr {
 }
 
 /*-------------------------- 7. Icons ----*/
-.footer-top__icon {
+.footer__top-icon {
   width: 50px;
   height: 50px;
   margin-left: 1rem;
 }
 
-.footer-top__icon:first-of-type {
+.footer__top-icon:first-of-type {
   margin-left: 0;
 }
 
@@ -718,14 +787,8 @@ li {
   line-height: 1.3rem;
 }
 
-.list__why-us {
-  padding: 1rem;
-}
-
-.list__why-us li {
-  background: url("/src/images/phone.svg") no-repeat;
-  background-position: left center;
-  padding: 10px 10px 10px 40px;
+.about__list li {
+  list-style: disc;
 }
 
 /*---------------------- 8. Accordian ----*/
@@ -778,10 +841,6 @@ li {
 }
 
 /*--------------------------- 8. Form ----*/
-label {
-  margin-bottom: 0.5rem;
-}
-
 input, select, textarea {
   width: 100%;
   height: 2rem;
@@ -894,7 +953,7 @@ button[type="submit"] {
   h2 {
     font-size: 2rem;
   }
-  .footer-top__left {
+  .footer__top__left {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -903,17 +962,17 @@ button[type="submit"] {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .footer-top__left .footer-top__icon {
+  .footer__top__left .footer__top-icon {
     margin-bottom: 0.5rem;
   }
-  .footer-top__left span {
+  .footer__top__left span {
     margin-left: 0rem;
   }
-  .footer-top__left span:first-of-type {
+  .footer__top__left span:first-of-type {
     margin-right: 0;
     margin-bottom: 1.5rem;
   }
-  .footer-top__icon {
+  .footer__top-icon {
     margin: 0;
   }
   .quote-form__inner {
@@ -956,32 +1015,20 @@ button[type="submit"] {
   .how-works h2 {
     margin: 0 2rem;
   }
-  .about__inner {
+  .info__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     margin: 0;
   }
-  .about__inner__img {
-    width: 100%;
-    min-height: 40vh;
-    margin-left: 0;
-  }
-  .about__inner__info {
-    width: 100%;
-    padding: 2rem 0 0 0;
-  }
   .why-us__inner {
     padding: 0;
   }
-  .list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+  .why-us__inner__lists {
+    display: block;
   }
-  .list__why-us {
+  .why-us__inner__lists ul {
     padding: 0;
   }
   .flexible__inner {
@@ -1012,31 +1059,15 @@ button[type="submit"] {
         -ms-flex-align: center;
             align-items: center;
   }
-  .footer-top, .footer-middle, .footer-bottom {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .footer-top__left {
-    margin-bottom: 1.5rem;
-  }
-  .footer-middle__links {
-    margin: 1rem 0;
-    text-align: center;
-  }
 }
 
 @media (max-width: 991px) {
   .burger-btn {
     display: block;
     z-index: 2;
+    position: absolute;
+    right: 32px;
+    top: 55px;
     -webkit-appearance: none;
        -moz-appearance: none;
             appearance: none;
@@ -1054,7 +1085,7 @@ button[type="submit"] {
   .burger-btn:checked + .burger-label .bottom {
     opacity: 0;
   }
-  .burger-btn:checked + .burger-label + .navbar-inner__nav {
+  .burger-btn:checked + .burger-label + .navbar__bottom__nav {
     -webkit-transform: translateY(100vh);
             transform: translateY(100vh);
   }
@@ -1074,7 +1105,7 @@ button[type="submit"] {
     -webkit-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
   }
-  .navbar-inner__nav {
+  .navbar__bottom__nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1095,11 +1126,22 @@ button[type="submit"] {
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
   }
-  .nav__item {
+  .nav-item {
     margin: 1.5rem 0;
   }
   .nav__btn {
     margin-left: 0;
+  }
+  .info__inner__img {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+  }
+  .info__inner__text {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    margin: 2rem 0 0 0;
   }
   .storage__inner {
     -webkit-box-orient: vertical;
@@ -1115,17 +1157,58 @@ button[type="submit"] {
   .storage__inner__info h1, .storage__inner__info h2, .storage__inner__info h3 {
     font-size: 2.5rem;
   }
+  .about__info {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    margin: 0 0 2rem 0;
+  }
+  .about__img {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+  }
+  .about__list {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+  }
   .storage__inner__img {
     width: 100%;
     min-height: 40vh;
     margin-left: 0;
     margin-top: 2rem;
   }
+  .footer__top, .footer__middle, .footer__bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer__top__left {
+    margin-bottom: 1.5rem;
+  }
+  .footer__middle__links {
+    margin: 1rem 0;
+    text-align: center;
+  }
 }
 
 @media (max-width: 1199px) {
-  .services__inner,
-  .how-works__inner,
+  .services__inner {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .how-works__inner {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
   .packing__inner {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
@@ -1233,13 +1316,13 @@ small {
 
 /*------------------------------- 4. Navigation ----*/
 /*-- 4.1. Navbar Top --*/
-.navbar-top, .navbar-bottom {
+.navbar__top, .navbar__bottom {
   background: #dd6e42;
   color: #3f3f3f;
 }
 
 /*-- 4.2. Navbar Bottom --*/
-.navbar-bottom {
+.navbar__bottom {
   background: #13293d;
   color: #ffffff;
 }
@@ -1270,14 +1353,9 @@ small {
           animation: bg-scale 20s linear infinite;
 }
 
-/*-- 5.2. About Section --*/
-.about {
+/*-- 5.2. Info Section --*/
+.info {
   background: #d7cdcc;
-}
-
-.about__inner__img {
-  background: url("/src/images/1.jpg") center center no-repeat;
-  background-size: cover;
 }
 
 /*----------------------- 6. House Storage Page ----*/
