--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -1,246 +1,266 @@
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575px) {
-  .hero h1 {
-    font-size: 12vw;
-  }
-
-  .btn-large {
-    padding: 0.5rem 1rem;
-    margin-top: 2rem;
-  }
-
-  h2 {
-    font-size: 2rem;
-  }
-
-  .footer-top__left {
-    display: flex;
-    flex-direction: column;
-
-    & .footer-top__icon {
-      margin-bottom: 0.5rem;
+    .hero h1 {
+        font-size: 12vw;
     }
 
-    & span {
-      margin-left: 0rem;
+    .btn-large {
+        padding: 0.5rem 1rem;
+        margin-top: 2rem;
     }
 
-    & span:first-of-type {
-      margin-right: 0;
-      margin-bottom: 1.5rem;
+    h2 {
+        font-size: 2rem;
     }
-  }
 
-  .footer-top__icon {
-    margin: 0;
-  }
+    .footer__top__left {
+        display: flex;
+        flex-direction: column;
 
-  .quote-form__inner {
-    display: block;
-  }
+        & .footer__top-icon {
+            margin-bottom: 0.5rem;
+        }
 
-  .left {
-    padding-right: 0;
-  }
+        & span {
+            margin-left: 0rem;
+        }
+
+        & span:first-of-type {
+            margin-right: 0;
+            margin-bottom: 1.5rem;
+        }
+    }
+
+    .footer__top-icon {
+        margin: 0;
+    }
+
+    .quote-form__inner {
+        display: block;
+    }
+
+    .left {
+        padding-right: 0;
+    }
 }
 
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767px) {
-  .services__inner {
-    @include flex-col-center;
-  }
-
-  .how-works__inner {
-    @include flex-col-center;
-  }
-
-  .how-works {
-    margin: 4rem 0;
-    padding: 0;
-
-    & h2 {
-      margin: 0 2rem;
+    .services__inner {
+        @include flex-col-center;
     }
-  }
 
-  .about__inner {
-    flex-direction: column;
-    margin: 0;
-  }
+    .how-works__inner {
+        @include flex-col-center;
+    }
 
-  .about__inner__img {
-    width: 100%;
-    min-height: 40vh;
-    margin-left: 0;
-  }
+    .how-works {
+        margin: 4rem 0;
+        padding: 0;
 
-  .about__inner__info {
-    width: 100%;
-    padding: 2rem 0 0 0;
-  }
+        & h2 {
+            margin: 0 2rem;
+        }
+    }
 
-  .why-us__inner {
-    padding: 0;
-  }
+    .info__inner {
+        flex-direction: column;
+        margin: 0;
+    }
 
-  .list {
-    flex-direction: column;
-  }
+    .why-us__inner {
+        padding: 0;
+    }
 
-  .list__why-us {
-    padding: 0;
-  }
+    .why-us__inner__lists {
+        display: block;
 
-  .flexible__inner {
-    flex-direction: column;
-    padding: 0;
-  }
+        & ul {
+            padding: 0;
+        }
+    }
 
-  .flexible__inner__img {
-    width: 100%;
-    min-height: 40vh;
-  }
+    .flexible__inner {
+        flex-direction: column;
+        padding: 0;
+    }
 
-  .flexible__inner__info {
-    width: 100%;
-    padding: 2rem 0 0 0;
-    margin: 0;
-  }
+    .flexible__inner__img {
+        width: 100%;
+        min-height: 40vh;
+    }
 
-  .packing__inner {
-    @include flex-col-center;
-  }
+    .flexible__inner__info {
+        width: 100%;
+        padding: 2rem 0 0 0;
+        margin: 0;
+    }
 
-  .footer-top {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .footer-top__left {
-    margin-bottom: 1.5rem;
-  }
-
-  .footer-middle__links {
-    margin: 1rem 0;
-    text-align: center;
-  }
+    .packing__inner {
+        @include flex-col-center;
+    }
 }
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991px) {
-  .burger-btn {
-    display: block;
-    z-index: 2;
-    appearance: none;
+    .burger-btn {
+        display: block;
+        z-index: 2;
+        position: absolute;
+        right: 32px;
+        top: 55px;
+        appearance: none;
 
-    &:checked + .burger-label .top {
-      transform: rotate(-45deg);
-      margin-top: 15px;
+        &:checked + .burger-label .top {
+            transform: rotate(-45deg);
+            margin-top: 15px;
+        }
+
+        &:checked + .burger-label .middle {
+            transform: rotate(45deg);
+            margin-top: -8px;
+        }
+
+        &:checked + .burger-label .bottom {
+            opacity: 0;
+        }
+
+        &:checked + .burger-label + .navbar__bottom__nav {
+            transform: translateY(100vh);
+        }
     }
 
-    &:checked + .burger-label .middle {
-      transform: rotate(45deg);
-      margin-top: -8px;
+    .burger-label {
+        background-color: transparent;
+        cursor: pointer;
+        z-index: 2;
+        position: absolute;
+        right: 35px;
     }
 
-    &:checked + .burger-label .bottom {
-      opacity: 0;
+    .bar {
+        display: block;
+        width: 30px;
+        height: 3px;
+        margin: 5px 0;
+        background-color: $white;
+        transition: all 0.1s ease-in-out;
     }
 
-    &:checked + .burger-label + .navbar-inner__nav {
-      transform: translateY(100vh);
+    .navbar__bottom__nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: fixed;
+        background: $color4-opac;
+        height: 100vh;
+        width: 100vw;
+        top: -100vh;
+        left: 0px;
+        z-index: 1;
+        transition: all 0.4s ease-in-out;
     }
-  }
 
-  .burger-label {
-    background-color: transparent;
-    cursor: pointer;
-    z-index: 2;
-    position: absolute;
-    right: 35px;
-  }
-
-  .bar {
-    display: block;
-    width: 30px;
-    height: 3px;
-    margin: 5px 0;
-    background-color: $white;
-    transition: all 0.1s ease-in-out;
-  }
-
-  .navbar-inner__nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: fixed;
-    background: $color4-opac;
-    height: 100vh;
-    width: 100vw;
-    top: -100vh;
-    left: 0px;
-    z-index: 1;
-    transition: all 0.4s ease-in-out;
-  }
-
-  .nav__item {
-    margin: 1.5rem 0;
-  }
-
-  .nav__btn {
-    margin-left: 0;
-  }
-
-  .storage__inner {
-    flex-direction: column;
-    margin: 0;
-  }
-
-  .storage__inner__info {
-    width: 100%;
-    padding: 0;
-
-    & h1 {
-      font-size: 2.5rem;
+    .nav-item {
+        margin: 1.5rem 0;
     }
-  }
 
-  .storage__inner__img {
-    width: 100%;
-    min-height: 40vh;
-    margin-left: 0;
-    margin-top: 2rem;
-  }
+    .nav__btn {
+        margin-left: 0;
+    }
+
+    .info__inner__img {
+        grid-column: 1 / 3;
+    }
+
+    .info__inner__text {
+        grid-column: 1 / 3;
+        margin: 2rem 0 0 0;
+    }
+
+    .storage__inner {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    .storage__inner__info {
+        width: 100%;
+        padding: 0;
+
+        & h1 {
+            font-size: 2.5rem;
+        }
+    }
+
+    .about__info {
+        grid-column: 1 / 3;
+        margin: 0 0 2rem 0;
+    }
+
+    .about__img {
+        grid-column: 1 / 3;
+    }
+
+    .about__list {
+        grid-column: 1 / 3;
+    }
+
+    .storage__inner__img {
+        width: 100%;
+        min-height: 40vh;
+        margin-left: 0;
+        margin-top: 2rem;
+    }
+
+    .footer__top {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer__top__left {
+        margin-bottom: 1.5rem;
+    }
+
+    .footer__middle__links {
+        margin: 1rem 0;
+        text-align: center;
+    }
 }
 
 // Large devices (desktops, less than 1200px)
 @media (max-width: 1199px) {
-  .services__inner,
-  .how-works__inner,
-  .packing__inner {
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-    grid-gap: 40px;
-  }
+    .services__inner {
+        grid-template-columns: repeat(2, 1fr);
+    }
 
-  .quote-container {
-    display: flex;
-    flex-direction: column;
-  }
+    .how-works__inner {
+        grid-template-columns: repeat(2, 1fr);
+    }
 
-  .quote-info {
-    text-align: left;
-  }
+    .packing__inner {
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+        grid-gap: 40px;
+    }
+
+    .quote-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .quote-info {
+        text-align: left;
+    }
 }
 
 /*--------------------------------------------------------------------------------------*/
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-  .hero h1 {
-    font-size: 10vw;
-  }
+    .hero h1 {
+        font-size: 10vw;
+    }
 }
 
 // // Medium devices (tablets, 768px and up)
@@ -249,14 +269,14 @@
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-  .hero h1 {
-    font-size: 8vw;
-  }
+    .hero h1 {
+        font-size: 8vw;
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-  .hero h1 {
-    font-size: 6vw;
-  }
+    .hero h1 {
+        font-size: 6vw;
+    }
 }
