--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -80,22 +80,6 @@
         }
     }
 
-    .flexible__inner {
-        flex-direction: column;
-        padding: 0;
-    }
-
-    .flexible__inner__img {
-        width: 100%;
-        min-height: 40vh;
-    }
-
-    .flexible__inner__info {
-        width: 100%;
-        padding: 2rem 0 0 0;
-        margin: 0;
-    }
-
     .packing__inner {
         @include flex-col-center;
     }
@@ -151,6 +135,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         position: fixed;
         background: $color4-opac;
         height: 100vh;
@@ -210,6 +195,15 @@
         min-height: 40vh;
         margin-left: 0;
         margin-top: 2rem;
+    }
+
+    .flexible__inner__img {
+        grid-column: 1 / 3;
+    }
+
+    .flexible__inner__info {
+        grid-column: 1 / 3;
+        margin: 1rem 0 0 0;
     }
 
     .footer__top {
