--- a/src/styles/scss/_components.scss
+++ b/src/styles/scss/_components.scss
@@ -166,6 +166,11 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.178);
 }
 
+.checklist__hr {
+  width: 100%;
+  margin: 2rem 0;
+}
+
 /*-------------------------- 7. Icons ----*/
 .footer__top-icon {
   width: 50px;
