--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -152,6 +152,12 @@ small {
   background: $color5;
 }
 
+
+/*-------------------------------- 5. Checklist Page ----*/
+.checklist label {
+  font-weight: bold;
+}
+
 /*-------------------------------- 5. Footer ----*/
 footer {
   background: $color3;
