--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -83,6 +83,22 @@
     .packing__inner {
         @include flex-col-center;
     }
+
+    .checklist {
+        padding: 4rem 0;
+    }
+
+    .checklist__grid {
+        grid-template-columns: 1fr;
+    }
+
+    .checklist__grid__left {
+        margin-bottom: 2rem;
+    }
+
+    .checklist__grid__right {
+        grid-column: 1 / 2;
+    }
 }
 
 // Medium devices (tablets, less than 992px)
