--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -158,6 +158,20 @@ small {
   font-weight: bold;
 }
 
+/*-------------------------------- 5. Contact Page ----*/
+.contact-form {
+  background: $color5;
+}
+
+.contact-info {
+  background: $color3;
+  color: $white;
+}
+
+.contact-map {
+  background: $color5;
+}
+
 /*-------------------------------- 5. Footer ----*/
 footer {
   background: $color3;
