--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -560,6 +560,48 @@
   margin: 0 auto;
 }
 
+/*---------------------- 4. Contact Page Sections ----*/
+.contact {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  padding: 4rem 2rem;
+}
+
+.contact__inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.contact-header {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1 / 4;
+}
+
+.contact-form {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  padding: 2rem;
+}
+
+.contact-info {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+  padding: 2rem;
+}
+
+.contact-map {
+  width: 100%;
+  height: 500px;
+}
+
 /*----------------------------------- ?. Footer ----*/
 .footer {
   -ms-grid-column: 1;
@@ -1306,6 +1348,16 @@ button[type="submit"] {
     grid-column: 1 / 3;
     margin: 1rem 0 0 0;
   }
+  .contact-form {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1 / 4;
+  }
+  .contact-info {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1 / 4;
+  }
   .footer__top, .footer__middle, .footer__bottom {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1518,6 +1570,20 @@ small {
 /*-------------------------------- 5. Checklist Page ----*/
 .checklist label {
   font-weight: bold;
+}
+
+/*-------------------------------- 5. Contact Page ----*/
+.contact-form {
+  background: #d7cdcc;
+}
+
+.contact-info {
+  background: #13293d;
+  color: #ffffff;
+}
+
+.contact-map {
+  background: #d7cdcc;
 }
 
 /*-------------------------------- 5. Footer ----*/
