--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -420,6 +420,38 @@
 }
 
 
+/*---------------------- 4. Contact Page Sections ----*/
+.contact {
+  @include grid-col-1;
+}
+
+.contact__inner {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: $max-width;
+  margin: 0 auto;
+}
+
+.contact-header {
+  grid-column: 1 / 4;
+}
+
+.contact-form {
+  grid-column: 1 / 3;
+  padding: 2rem;
+}
+
+.contact-info {
+  grid-column: 3 / 4;
+  padding: 2rem;
+}
+
+.contact-map {
+  width: 100%;
+  height: 500px;
+}
+
+
 /*----------------------------------- ?. Footer ----*/
 .footer {
   @include grid-col-1;
