--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -211,6 +211,35 @@
   font-weight: bold;
 }
 
+/*------------------ 3.5. Size Guide Section --*/
+.size-guide {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  padding: 4rem 2rem;
+}
+
+.size-guide__inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.size-guide__panes {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+}
+
+.size-guise__tabs {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+}
+
 /*-------------- 4. House Storage Page Sections ----*/
 /*----------------- 4.1. Header Section --*/
 .storage {
@@ -270,6 +299,7 @@
 
 .why-us__inner__lists ul {
   padding: 1rem;
+  margin: 0 auto;
 }
 
 .why-us__inner__lists ul li {
@@ -331,6 +361,14 @@
   margin-left: 2rem;
 }
 
+.flexible__inner__info p {
+  margin-bottom: 1rem;
+}
+
+.flexible__inner__info :last-of-type {
+  margin-bottom: 0;
+}
+
 /*---------------- 4.5. Security Section --*/
 .security {
   -ms-grid-column: 1;
@@ -339,6 +377,10 @@
   padding: 4rem 2rem;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+.security p:first-of-type {
+  margin-bottom: 1rem;
 }
 
 /*---------------- 4.6. Quote Section --*/
@@ -350,8 +392,8 @@
   text-align: center;
 }
 
-.quote button {
-  margin-top: 1rem;
+.quote p {
+  margin-bottom: 2rem;
 }
 
 /*------------------------ 4. FAQ Page Sections ----*/
@@ -362,7 +404,12 @@
   padding: 4rem 2rem;
 }
 
-.faq h1, .faq h2, .faq h3 {
+.faq__inner {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.faq__inner h1, .faq__inner h2, .faq__inner h3 {
   margin-bottom: 4rem;
 }
 
@@ -380,6 +427,10 @@
   grid-column: 1 / 2;
   padding: 4rem 2rem;
   text-align: right;
+}
+
+.quote-info p {
+  margin-top: 1rem;
 }
 
 .quote-form {
@@ -438,7 +489,11 @@
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
   padding: 4rem 2rem;
-  padding: 0;
+}
+
+.about__inner {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .about__top {
@@ -449,9 +504,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 4rem 2rem;
+  margin-bottom: 4rem;
 }
 
 .about__info {
@@ -459,6 +512,10 @@
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
   margin-right: 2rem;
+}
+
+.about__info p:first-of-type {
+  margin-bottom: 1rem;
 }
 
 .about__img {
@@ -474,12 +531,30 @@
   height: auto;
 }
 
+.about__middle {
+  margin-top: 4rem;
+}
+
+.about__middle p {
+  margin-bottom: 1rem;
+}
+
+.about__middle ul {
+  margin-bottom: 1rem;
+  padding-left: 3rem;
+}
+
+.about__middle p:last-of-type {
+  margin-bottom: 0;
+}
+
 .about__bottom {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
   padding: 4rem 2rem;
+  text-align: center;
+}
+
+.about__bottom p {
+  margin-bottom: 2rem;
 }
 
 .about__list {
@@ -602,6 +677,31 @@
   height: 500px;
 }
 
+/*---------------------- 4. Error 404 Page Sections ----*/
+.error-404 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  padding: 4rem 2rem;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.error-404__inner {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.error-404__inner p {
+  margin: 2rem 0;
+}
+
 /*----------------------------------- ?. Footer ----*/
 .footer {
   -ms-grid-column: 1;
@@ -686,6 +786,7 @@
 a {
   text-decoration: none;
   color: #ffffff;
+  cursor: pointer;
 }
 
 /*-- 1.1. Nav Links --*/
@@ -702,7 +803,7 @@ a {
 }
 
 /*---------------------------------- 1. Buttons ----*/
-button {
+.btn {
   border: none;
   background: #dd6e42;
   color: #ffffff;
@@ -714,19 +815,19 @@ button {
   font-weight: 700;
 }
 
-button:hover {
+.btn:hover {
   background: #c85324;
 }
 
-button:active {
+.btn:active {
   -webkit-transform: translateY(3px);
           transform: translateY(3px);
 }
 
 /*-- 2.1. Large Button --*/
 .btn-large {
-  padding: 1.5rem 3rem;
-  margin-top: 4rem;
+  margin-top: 2rem;
+  padding: 1.5rem 2rem;
   -webkit-animation: btn-translate 1s linear 1;
           animation: btn-translate 1s linear 1;
 }
@@ -754,7 +855,7 @@ button:active {
 .btn-to-top {
   display: none;
   position: fixed;
-  background: #13293d;
+  background: #dd6e42;
   right: 10px;
   bottom: 10px;
   line-height: 0.5rem;
@@ -987,6 +1088,10 @@ li {
   background: #d7cdcc;
 }
 
+.answer ul {
+  margin: 1rem 0;
+}
+
 /*--------------------------- 8. Form ----*/
 input, select, textarea {
   width: 100%;
@@ -1011,7 +1116,7 @@ textarea {
   padding: 0.5rem 1rem;
 }
 
-button[type="submit"] {
+button[type="submit"], .btn-large[type="submit"] {
   width: 100%;
 }
 
@@ -1022,6 +1127,15 @@ button[type="submit"] {
 
 .checklist__grid__right input[type="checkbox"]:checked + label + p, .checklist__grid__right select[type="checkbox"]:checked + label + p, .checklist__grid__right textarea[type="checkbox"]:checked + label + p {
   text-decoration: line-through;
+}
+
+/*--------------------------- 8. Tabs ----*/
+.pane {
+  display: none;
+}
+
+.pane.pane-active {
+  display: block;
 }
 
 @-webkit-keyframes bg-scale {
@@ -1102,10 +1216,6 @@ button[type="submit"] {
   .hero h1, .hero h2, .hero h3 {
     font-size: 12vw;
   }
-  .btn-large {
-    padding: 0.5rem 1rem;
-    margin-top: 2rem;
-  }
   h2 {
     font-size: 2rem;
   }
@@ -1183,6 +1293,7 @@ button[type="submit"] {
   }
   .why-us__inner__lists {
     display: block;
+    margin-top: 2rem;
   }
   .why-us__inner__lists ul {
     padding: 0;
@@ -1537,6 +1648,15 @@ small {
   background: #d7cdcc;
 }
 
+/*-- 5.2. Size Guide Section --*/
+.size-guide__tabs {
+  background: #13293d;
+}
+
+.size-guide__panes {
+  background: #d7cdcc;
+}
+
 /*----------------------- 6. House Storage Page ----*/
 .storage__inner__img {
   background: url("/src/images/1.jpg") center center no-repeat;
@@ -1562,7 +1682,7 @@ small {
   background: #d7cdcc;
 }
 
-/*-------------------------------- 5. Quote Page ----*/
+/*-------------------------------- 5. About Page ----*/
 .about__bottom {
   background: #d7cdcc;
 }
@@ -1584,6 +1704,12 @@ small {
 
 .contact-map {
   background: #d7cdcc;
+}
+
+/*-------------------------------- 5. Error 404 Page ----*/
+.error-404 {
+  background: #16324f;
+  color: #ffffff;
 }
 
 /*-------------------------------- 5. Footer ----*/
