--- a/src/styles/scss/_components.scss
+++ b/src/styles/scss/_components.scss
@@ -16,6 +16,7 @@
 a {
   text-decoration: none;
   color: $white;
+  cursor: pointer;
 }
 
 /*-- 1.1. Nav Links --*/
@@ -32,7 +33,7 @@ a {
 }
 
 /*---------------------------------- 1. Buttons ----*/
-button {
+.btn {
   border: none;
   background: $color1;
   color: $white;
@@ -54,8 +55,9 @@ button {
 
 /*-- 2.1. Large Button --*/
 .btn-large {
-  padding: 1.5rem 3rem;
-  margin-top: 4rem;
+  @extend button;
+  margin-top: 2rem;
+  padding: 1.5rem 2rem;
   animation: btn-translate 1s linear 1;
 }
 
@@ -84,7 +86,7 @@ button {
 .btn-to-top {
   display: none;
   position: fixed;
-  background: $color3;
+  background: $color1;
   right: 10px;
   bottom: 10px;
   line-height: 0.5rem;
@@ -244,6 +246,7 @@ li {
   }
 }
 
+
 /*---------------------- 8. Accordian ----*/
 
 .accordian {
@@ -288,13 +291,13 @@ li {
 .answer {
   padding: 1rem 2rem;
   background: $color5;
+
+  & ul {
+    margin: 1rem 0;
+  }
 }
 
 /*--------------------------- 8. Form ----*/
-label {
-  //margin-bottom: 0.5rem;
-}
-
 input {
   width: 100%;
   height: 2rem;
@@ -336,4 +339,14 @@ button[type="submit"] {
 
 .checklist__grid__right input[type="checkbox"]:checked + label + p {
   text-decoration: line-through;
+}
+
+
+/*--------------------------- 8. Tabs ----*/
+.pane {
+  display: none;
+}
+
+.pane.pane-active {
+  display: block;
 }
