--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -1636,8 +1636,8 @@ small {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.733))), url("/src/images/1.jpg") center center no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.733)), url("/src/images/1.jpg") center center no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.733))), url("/src/images/background.jpg") center center no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.733)), url("/src/images/background.jpg") center center no-repeat;
   background-size: cover;
   -webkit-animation: bg-scale 20s linear infinite;
           animation: bg-scale 20s linear infinite;
